# stupid-hack-5-api-challenge

./: README.md
code/: .dockerignore  .env.example  Cargo.toml  Dockerfile
code/src/: main.rs
code/src/models/: dispenser.rs  docs.rs  firebase.rs  graphql.rs  mod.rs
code/src/modules/: mod.rs
code/src/modules/docs/: controllers.rs
code/src/modules/graphql/: controllers.rs
code/src/modules/landing/: controllers.rs
code/src/modules/not_found/: controllers.rs
code/src/services/: schema.rs
code/src/services/users/profile/: models.rs  services.rs
infra/: config.ts
infra/cloud run/: index.ts
