[package]
name = "stupid-hack-api"
version = "0.1.0"
authors = ["SaltyAom <aomkirby123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
juniper = "0.15.6"
serde = "1.0.126"
serde_json = "1.0.64"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls", "json"] }
dotenv = "0.15.0"
